fix: navbar button styling on mobile

--- a/src/dotnet/Chat.UI.Blazor/Components/Navbar/navbar.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/Navbar/navbar.css
@@ -10,7 +10,7 @@
 }
 .navbar-button .left-line {
     @apply self-center;
-    @apply h-12;
+    @apply h-10 md:h-12;
     @apply py-2;
     @apply rounded-full;
 }
